# business-cycle-accounting

./: .gitignore  BCA_info.md  CLAUDE.md  COVID_PLAN.md  DIVERGENCE_ANALYSIS.md  Diary.md  README.md  README_AI.md  REPORT.md  STEP1_OCTAVE_RESULTS.md  STEP23_BOOTSTRAP_SENSITIVITY.md  STEP9_HANDOFF.md  bca-web-app-instructions.md  counterfactual-debugging-summary.md  llm_replication_reflections.md  llms.txt  pyproject.toml  vision-doc.md
bca_core/: __init__.py  bckm_lom.py  bckm_reference.py  constants.py  counterfactuals.py  klein.py  model.py  params.py  var_estimation.py  wedges.py
bca_web/: Diary.md  index.html  package-lock.json  package.json
bckm_replication/: BCKM_DIFF_GUIDE.md  BCKM_RESULTS.md  DATA_FORENSICS.md  DIVERGENCE_ANALYSIS.md  REPORT.md  counterfactual-debugging-summary.md
covid_analysis/: Diary.md  REPORT.md
data/: us_1948_2014.parquet  us_1969_2014.meta.json  us_1969_2014.parquet  us_1980_2014.parquet  us_1980_2014_calgz.meta.json  us_1980_2014_calgz.parquet
matlab_reference/: Untitled.m  Untitled2.m  bca_params2.m  bca_resid2.m  bca_simul2.m  bca_steady2.m  bca_wedges2.m  data.mat  datamine.m  datamine_l.m  doubalg.m  dump_worktemp_for_diff.m  fixexpadj.m  fstats3.m  gacc_a.m  gwedges2.m  initmle.m  kfilter.m  mleqadj_check.m  octave_full_pipeline.m  octave_multistart.m  printit.m  ptime.m  res_adjust2.m  runnit.m  secant.m  umlnmin.m  umstop.m  worktemp.mat  xcorr.m
octave_output/: C_bckm.csv  bckm_hp_tables.csv  bckm_mled.csv  bckm_obs_raw.csv  gamma0_bckm.csv  partials_bckm.csv
scripts/: bootstrap_mle.py  build_quarterly_data.py  (+32 more)
(+101 files in other folders)
