[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bca-core"
version = "0.1.0"
description = "Business Cycle Accounting — Python port of BCAppIt!"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "fredapi>=0.5",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["bca_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that load the US data parquet and run the MLE/CF pipeline (skip in fast CI with `pytest -m 'not slow'`)",
]
